--- a/style.css
+++ b/style.css
@@ -115,3 +115,14 @@ li:hover {
     text-decoration: line-through;
 }
 
+a {
+    color:black;
+    padding: 5px;
+    margin: 5px;
+    background-color:white;
+    box-shadow: 0 2px 8px rgba(0,0,0,1);
+    border-radius: 5px;
+    transition: .5s;
+    text-decoration: none;
+}
+
